namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-allocate-key-workers-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-allocate-key-workers-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "HMPPS Allocate Key Workers"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-allocate-key-workers-ui"
    cloud-platform.justice.gov.uk/owner: "Live Services Maintenance: HMPPSLiveServicesMaintenanceTeam@JusticeUK.onmicrosoft.com"
    cloud-platform.justice.gov.uk/team-name: "hmpps-prisons-digital-live-support"
    cloud-platform.justice.gov.uk/slack-channel: "ask-live-services-maintenance-team"
    cloud-platform.justice.gov.uk/slack-alert-channel: "maintenance-alerts-non-prod"
    cloud-platform.justice.gov.uk/service-area: "Live Support"
